# smithy4rs

./: .gitignore  404.html  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md  _typos.toml  deny.toml  highlight.js  index.html  print.html  quick-start.html  searchindex.js  searchindex.json
.config/: mise.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: base-benchmarks.yml  ci.yml  codegen-test.yml  pr-benchmarks.yml  publish-codegen.yml  publish-crates.yml  publish-docs.yml  rust-checks.yml
assets/: under-construction.css
cedar-compat/: Cargo.toml
cedar-compat/src/: serialization.rs
codegen/: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
codegen-test/: .gitignore  Cargo.toml  build.rs  codegen-link  smithy-build.json
codegen-test/model/: main.smithy
codegen-test/src/: lib.rs
codegen/buildSrc/: build.gradle.kts  settings.gradle
codegen/buildSrc/src/main/kotlin/: smithy4rs.java-conventions.gradle.kts  smithy4rs.module-conventions.gradle.kts  smithy4rs.publishing-conventions.gradle.kts
codegen/client/: index.html
codegen/config/spotbugs/: filter.xml
codegen/config/spotless/: license-header.txt
codegen/core/: README.md  build.gradle.kts
codegen/core/src/main/java/dev/hmellema/smithy4rs/codegen/: CodeGenerationContext.java  CodegenEdition.java  EnvironmentVariable.java  RustCodegenIntegration.java  RustCodegenSettings.java  RustSymbolProvider.java  SymbolProperties.java  TraitInitializer.java  Utils.java
codegen/core/src/main/java/dev/hmellema/smithy4rs/codegen/generators/: DefaultGenerator.java  DeriveGenerator.java  EnumGenerator.java  ListGenerator.java  MapGenerator.java  ScalarSchemaGenerator.java  (+4 more)
codegen/core/src/main/resources/dev/hmellema/smithy4rs/codegen/: rust-reserved-words.txt
codegen/core/src/test/java/dev/hmellema/smithy4rs/codegen/: SnapshotTestRunner.java  TestRustCodegen.java  TestRustCodegenPlugin.java
codegen/gradle/: libs.versions.toml
codegen/plugins/: build.gradle.kts
codegen/plugins/type-codegen/: README.md  build.gradle.kts
codegen/server/: index.html
codegen/test-utils/: build.gradle.kts
codegen/types/: index.html
core/: Cargo.toml  build.rs  smithy-build.json
core-derive/: Cargo.toml
core-derive/src/: adapter.rs  builder.rs  debug.rs  deserialization.rs  lib.rs  schema.rs  serde.rs  serialization.rs  utils.rs
core-derive/src/shapes/: adapter.rs  arbitrary.rs  builder.rs  constructor.rs  deref.rs  deserialization.rs  error_correction.rs  mod.rs  schema.rs  serialization.rs  traits.rs  utils.rs
core-derive/src/traits/: constructor.rs  id.rs  mod.rs  trait_impl.rs
core-derive/tests/: integration_test.rs
core-derive/tests/expand/: README.md  all_shapes.expanded.rs  all_shapes.rs  enum.expanded.rs  enum.rs  int_enum.expanded.rs  int_enum.rs  optional_fields.expanded.rs  optional_fields.rs  simple_struct.expanded.rs  simple_struct.rs  union.expanded.rs  union.rs
core-derive/tests/shapes/expand/: enum.expanded.rs  int_enum.expanded.rs  mod.expanded.rs  simple_struct.expanded.rs  union.expanded.rs
core-derive/tests/shapes_expand/: README.md  enum.expanded.rs  enum.rs  int_enum.expanded.rs  int_enum.rs  mod.rs  nested_struct.expanded.rs  nested_struct.rs  nested_wrapper.expanded.rs  nested_wrapper.rs  simple_struct.expanded.rs  simple_struct.rs  union.expanded.rs  union.rs  wrapper.expanded.rs  wrapper.rs
core-derive/tests/traits_expand/: README.md  list_trait.expanded.rs  list_trait.rs  map_trait.expanded.rs  map_trait.rs  mod.rs  union_trait.rs
core/benches/: documents.rs  schema.rs  validation.rs
core/src/: documents.rs  lib.rs  macros.rs  prelude.rs  schema.rs  shapes.rs  traits.rs
core/src/features/: mod.rs
core/src/features/adapters/: deserialization.rs  mod.rs  serialization.rs
core/src/features/arbitrary/: deserializer.rs  mod.rs  schema.rs
core/src/macros/: mod.rs
core/src/schema/: documents.rs  macros.rs  mod.rs  operations.rs  prelude.rs  schema.rs  schemas.rs  shapes.rs  traits.rs  unit.rs
core/src/schema/traits/: core.rs  mod.rs  prelude.rs
core/src/serde/: adapter.rs  builders.rs  codec.rs  correction.rs  de_adapter.rs  debug.rs  deserializers.rs  documents.rs  example_shape.rs  fmt.rs  mod.rs  never.rs  serializers.rs  shapes.rs  unit.rs  utils.rs  validation.rs
core/src/serde/adapters/: deserialization.rs  mod.rs  serialization.rs
core/src/serde/arbitrary/: deser.rs  mod.rs
core/tests/: integration_tests.rs  shapes.rs
docs/: Documents.md  Validation.md  book.toml
docs/src/: 404.md  README.md  SUMMARY.md  quick-start.md
docs/src/codegen/: README.md
docs/src/codegen/client/: README.md
docs/src/codegen/server/: README.md
docs/src/codegen/types/: README.md
docs/src/guides/: documents.md  fuzzing.md  schemas.md  serde-compatibility.md  validation.md
docs/src/tutorials/: README.md  sub-chapter.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_target_1.rs  validator_fuzzing.rs
guides/: documents.html  fuzzing.html  schemas.html  serde-compatibility.html  validation.html
http/: Cargo.toml
http/src/: binding.rs  deserialize.rs  error.rs  header.rs  label.rs  lib.rs  query.rs  serialize.rs  uri.rs
http/tests/: roundtrip.rs
http/tests/common/: mod.rs
json-codec/: Cargo.toml
json-codec/benches/: comparison.rs  json_serialization.rs  profile_target.rs
json-codec/src/: deserialization.rs  errors.rs  lib.rs  serialization.rs
json-codec/tests/: empty_containers_test.rs  integration_tests.rs  malformed_json_test.rs  missing_fields_test.rs  nested_deserialization_test.rs  nested_serialization_test.rs  numeric_overflow_test.rs  roundtrip.rs  serialization_test.rs  shapes.rs  type_mismatch_test.rs  unknown_fields_test.rs
schema/: cargo.toml
schema/src/: documents.rs  lib.rs  macros.rs  prelude.rs  schema.rs  shapes.rs  traits.rs
serde/: cargo.toml
serde/src/: builders.rs  deserializers.rs  documents.rs  fmt.rs  lib.rs  serializers.rs  shapes.rs
test-utils/: Cargo.toml
test-utils/src/: basic_types.rs  defaults.rs  enums.rs  lib.rs  nested.rs  recursive.rs  unions.rs
tutorials/: index.html
(+37 files in other folders)
