[workspace]
resolver = "2"
members = [
    "core",
    "core-derive"
]
default-members = [
    "core",
    "core-derive"
]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"

# Config for 'cargo release'
[workspace.metadata.release]
# Don't release any crate unless its manifest has `release = true`
release = false

[workspace.package]
version = "0.0.1"
edition = "2024"
repository = "https://github.com/mellemahp/smithy4rs"
license-file = "LICENSE"
readme = "README.md"
authors = ["Hunter Mellema <hunter@hmellema.space>"]
keywords = ["smithy", "api"]
categories = ["api-bindings"]

[workspace.dependencies]
smithy4rs-core-derive = { version = "0.0.1", path = "core-derive" }
smithy4rs-core = { version = "0.0.1", path = "core" }
jiter = "0.9.0"
json = "0.12.4"
num-bigint = "0.4"
bigdecimal = "0.4.8"
bytebuffer = "2.3.0"
thiserror = "2.0.12"
indexmap = "2.8.0"
downcast-rs = "2.0.1"
regex = "1.11.2"

[workspace.lints.rust]
future-incompatible = "warn"
nonstandard_style = { level = "deny", priority = 1 }

[workspace.lints.clippy]
all = { level = "deny", priority = 10 }
wildcard_imports = { level = "deny", priority = 11}
option_if_let_else = { level = "deny" }
or_fun_call = { level = "deny" }
get_first = { level = "deny" }
redundant_clone = { level = "deny" }
manual_ok_or = { level = "deny" }
manual_while_let_some = { level = "deny" }
unnecessary_wraps = { level = "deny" }
needless_collect = { level = "deny" }
