[workspace]
resolver = "2"
members = ["core", "core-derive"]
default-members = ["core", "core-derive"]

# Config for 'cargo release'
[workspace.metadata.release]
# Don't release any crate unless its manifest has `release = true`
release = false

[workspace.package]
version = "0.0.1"
edition = "2024"
repository = "https://github.com/mellemahp/smithy4rs"
license-file = "LICENSE"
license = "Apache-2.0"
readme = "README.md"
authors = ["Hunter Mellema <hunter@hmellema.space>"]
keywords = ["smithy", "api"]
categories = ["api-bindings"]

[workspace.dependencies]
bigdecimal = "0.4.8"
bytebuffer = "2.3.0"
criterion = "0.3"
downcast-rs = "2.0.2"
fast-str = "1.0.0"
indexmap = "2.11.4"
jiter = "0.9.0"
json = "0.12.4"
num-bigint = "0.4"
regex = "1.12.1"
smithy4rs-core = { version = "0.0.1", path = "core" }
smithy4rs-core-derive = { version = "0.0.1", path = "core-derive" }
temporal_rs = "0.1.0"
thiserror = "2.0.17"

[workspace.lints.rust]
future-incompatible = "warn"
nonstandard_style = { level = "deny", priority = 1 }
unsafe_code = "forbid"
unused_qualifications = "warn"
unused_extern_crates = "forbid"
unreachable_code = "forbid"
unreachable_patterns = "forbid"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
elided_lifetimes_in_paths = "warn"
# missing_docs = { level = "deny" }

[workspace.lints.clippy]
all = { level = "deny", priority = 10 }
wildcard_imports = { level = "deny", priority = 11 }
option_if_let_else = { level = "deny" }
or_fun_call = { level = "deny" }
get_first = { level = "deny" }
redundant_clone = { level = "deny" }
manual_ok_or = { level = "deny" }
manual_while_let_some = { level = "deny" }
unnecessary_wraps = { level = "deny" }
needless_collect = { level = "deny" }
# documentation lints
doc_link_with_quotes = { level = "deny" }
doc_markdown = { level = "deny" }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"

[profile.bench]
opt-level = 3
lto = "thin"

