[package]
name = "smithy4rs-core-derive"
description = "Derive macros smithy4rs."
repository.workspace = true
publish = true
readme.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
edition.workspace = true
version.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = {version = "2.0", features = ["full"]}
quote = "1.0"
proc-macro2 = "1.0.101"
proc-macro-crate = "3.4.0"

[dev-dependencies]
macrotest = "1.0"
smithy4rs-core = { path = "../core" }
indexmap = "2.6"

[lints]
workspace = true
