[package]
name = "smithy4rs-core-derive"
description = "Derive macros smithy4rs."
repository.workspace = true
publish = true
readme.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
edition.workspace = true
version.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = {version = "2.0", features = ["full"]}
quote = "1.0"
proc-macro2 = "1.0.106"
proc-macro-crate = "3.5.0"

[dev-dependencies]
macrotest = "1.2"
smithy4rs-core = { path = "../core" }
# Allows macro-expand tests to work with `--all-features` flag
serde = { version = "1.0"}
arbitrary = { version = "1.4.2" }

[lints]
workspace = true

[features]
serde-adapter = ["smithy4rs-core/serde-adapters"]
arbitrary = ["smithy4rs-core/arbitrary"]
