[package]
name = "smithy4rs-core"
description = "Core functionality for smithy4rs."
repository.workspace = true
publish = true
readme.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
edition.workspace = true
version.workspace = true

[dependencies]
num-bigint.workspace = true
bigdecimal.workspace = true
bytebuffer.workspace = true
indexmap.workspace = true
thiserror.workspace = true
downcast-rs.workspace = true
regex.workspace = true
fast-str.workspace = true
temporal_rs.workspace = true
smithy4rs-core-derive.workspace = true

# <TODO> move to workspace
pastey = "0.2.1"
# <TODO> What features are required for serde adapter?
serde = { version = "1.0", optional = true }
static_str_ops = "0.1.2"
rustc-hash = "2.1.1"
log = "0.4.29"

[dev-dependencies]
serde_json = "1.0.149"
criterion.workspace = true
serde-xml-rs = "0.8.2"

[lints]
workspace = true

[features]
serde-adapters = ["dep:serde"]

[[bench]]
name = "schema"
harness = false

[[bench]]
name = "validation"
harness = false

[[bench]]
name = "documents"
harness = false