[package]
name = "smithy4rs-core"
description = "Core functionality for smithy4rs."
repository.workspace = true
publish = true
readme.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
edition.workspace = true
version.workspace = true

[dependencies]
# core data types (re-exported)
num-bigint = "0.4.6"
bigdecimal = "0.4.10"
bytebuffer = "2.3.0"
indexmap = "2.13.0"
temporal_rs = "0.1.1"
# utility
downcast-rs = "2.0.2"
fast-str = "1.0.0"
regex = "1.12.2"
rustc-hash = "2.1.1"
stack-array = "0.4.1"
static_str_ops = "0.1.2"
# macros
smithy4rs-core-derive.workspace = true
pastey = "0.2.1"
# adapter
serde = { version = "1.0", optional = true, default-features = false }
# common
thiserror.workspace = true

[dev-dependencies]
serde_json = "1.0.149"
criterion.workspace = true
serde-xml-rs = "0.8.2"

[lints]
workspace = true

[features]
serde-adapters = ["dep:serde", "smithy4rs-core-derive/serde-adapter", "num-bigint/serde", "bigdecimal/serde"]

[[bench]]
name = "schema"
harness = false

[[bench]]
name = "validation"
harness = false

[[bench]]
name = "documents"
harness = false