[package]
name = "codegen-test-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
smithy4rs-core = { version = "0.0.1", path = "../core", features = ["arbitrary"] }
arbitrary = { version = "1.4.2", default-features = false }

[[bin]]
name = "validator"
path = "fuzz_targets/validator_fuzzing.rs"
test = false
doc = false
bench = false
