[package]
name = "fuzz"
version = "0.0.0"
publish = false
edition.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[package.metadata]
cargo-fuzz = true

[package.metadata.cargo-machete]
ignored = ["arbitrary"]

[lints]
workspace = true

[dependencies]
libfuzzer-sys = "0.4"
smithy4rs-core = { version = "0.0.1", path = "../core", features = ["arbitrary"] }
arbitrary = { version = "1.4.2", default-features = false }

[[bin]]
name = "validator"
path = "fuzz_targets/validator_fuzzing.rs"
test = false
doc = false
bench = false
