[package]
name = "smithy4rs-json-codec"
description = "Core JSON serde functionality for smithy4rs."
repository.workspace = true
publish = true
readme.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
edition.workspace = true
version.workspace = true

[dependencies]
smithy4rs-core.workspace = true
indexmap.workspace = true
thiserror.workspace = true
itoa = "1.0"
ryu = "1.0"
jiter.workspace = true

[dev-dependencies]
smithy4rs-core-derive.workspace = true
criterion = { version = "0.5", features = ["html_reports"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
indexmap = { version = "2.12.0", features = ["serde"] }

[[bench]]
name = "json_serialization"
harness = false

[[bench]]
name = "comparison"
harness = false

[[bench]]
name = "profile_target"
harness = false

[lints]
workspace = true

