[package]
name = "smithy4rs-json-codec"
description = "Core JSON serde functionality for smithy4rs."
repository.workspace = true
publish = true
readme.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
edition.workspace = true
version.workspace = true

[dependencies]
smithy4rs-core.workspace = true
indexmap.workspace = true
thiserror.workspace = true
itoa = "1.0"
ryu = "1.0"
jiter.workspace = true

[dev-dependencies]
smithy4rs-core-derive.workspace = true
smithy4rs-test-utils = { path = "../test-utils" }
indexmap = { workspace = true, features = ["serde"] }

[lints]
workspace = true

