[package]
name = "smithy4rs-json-codec"
description = "Core JSON serde functionality for smithy4rs."
repository.workspace = true
publish = true
readme.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
edition.workspace = true
version.workspace = true

[dependencies]
smithy4rs-core.workspace = true
thiserror.workspace = true
itoa = "1.0"
ryu = "1.0"
jiter = "0.13.0"

[dev-dependencies]
smithy4rs-test-utils = { path = "../test-utils" }

[lints]
workspace = true

