[package]
name = "smithy4rs-test-utils"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
smithy4rs-core.workspace = true
serde = { version = "1.0", optional = true }

[lints]
workspace = true

[features]
serde-adapter = ["dep:serde"]

[package.metadata.cargo-machete]
ignored = ["serde"]