[package]
name = "smithy4rs-test-utils"
publish = false
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
smithy4rs-core.workspace = true
serde = { version = "1.0", optional = true, default-features = false }
arbitrary = { version = "1.4.2", optional = true, default-features = false }

[lints]
workspace = true

[features]
arbitrary = ["dep:arbitrary", "smithy4rs-core/arbitrary"]
serde-adapter = ["dep:serde", "smithy4rs-core/serde-adapters"]

[package.metadata.cargo-machete]
ignored = ["serde"]